attempt to update docs branch on push 4

--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -21,11 +21,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          repository: '/hoshikon/pages'
       - name: Commit to branch
         run: |
           git config --global user.name '${{ github.event.pusher.name }}'
           git config --global user.email '${{ github.event.pusher.email }}'
-          git checkout pages
           git pull -r
           ./run.sh
           git add docs/.
