--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -27,9 +27,8 @@ jobs:
         run: |
           git config --global user.name '${{ github.event.pusher.name }}'
           git config --global user.email '${{ github.event.pusher.email }}'
-          git pull -r
+          git pull -r origin main
           ./run.sh
-          ls -lrt
           git add ./docs/.
           git commit -m "update docs"
           git push
