--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           git config --global user.name '${{ github.event.pusher.name }}'
           git config --global user.email '${{ github.event.pusher.email }}'
+          git fetch origin main
           git pull -r origin main
           ./run.sh
           git add ./docs/.
