attempt to fix the pipeline

--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -29,9 +29,8 @@ jobs:
           git config --global user.name '${{ github.event.pusher.name }}'
           git config --global user.email '${{ github.event.pusher.email }}'
           git fetch origin main
-          git pull -r origin main
-          git pull -r
+          git rebase origin/main
           ./run.sh
           git add ./docs/.
           git commit -m "update docs"
-          git push
+          git push -f
