--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -29,6 +29,7 @@ jobs:
           git config --global user.name '${{ github.event.pusher.name }}'
           git config --global user.email '${{ github.event.pusher.email }}'
           git fetch origin main
+          git branch
           git rebase -v origin/main
           ./run.sh
           git add ./docs/.
