--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -30,6 +30,7 @@ jobs:
           git config --global user.email '${{ github.event.pusher.email }}'
           git fetch origin main
           git branch
+          git pull -r
           git rebase -v origin/main
           ./run.sh
           git add ./docs/.
