--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -29,9 +29,9 @@ jobs:
           git config --global user.name '${{ github.event.pusher.name }}'
           git config --global user.email '${{ github.event.pusher.email }}'
           git fetch origin main
-          git branch
-          git pull -r
           git rebase -v origin/main
+          git add .
+          git rebase --continue
           ./run.sh
           git add ./docs/.
           git commit -m "update docs"
