--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -28,12 +28,10 @@ jobs:
         run: |
           git config --global user.name '${{ github.event.pusher.name }}'
           git config --global user.email '${{ github.event.pusher.email }}'
-          echo 'fetch'
-          git fetch origin main
+          git status
+          git pull -r
           echo 'rebase'
-          git rebase -v origin/main
-          git add .
-          git rebase --continue
+          git rebase -v main --no-edit
           ./run.sh
           git add ./docs/.
           git commit -m "update docs"
