--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -24,6 +24,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: 'pages'
+          fetch-depth: 0
       - name: update branch
         run: |
           git config --global user.name '${{ github.event.pusher.name }}'
@@ -31,8 +32,8 @@ jobs:
           git status
           git pull -r
           git branch -v -a
-          echo 'merge'
-          git merge -v origin/main --no-edit
+          echo 'rebase'
+          git rebase -v origin/main
           ./run.sh
           git add ./docs/.
           git commit -m "update docs"
