--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -35,6 +35,7 @@ jobs:
           git branch -v -a
           echo 'rebase'
           git rebase -v origin/main
+          git rebase --continue
           ./run.sh
           echo 'add'
           git add ./docs/.
